--- a/observability_proxy_server/requirements.txt
+++ b/observability_proxy_server/requirements.txt
@@ -2,5 +2,5 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 httpx==0.25.2
 langfuse==2.50.2
-pydantic==2.5.0
+pydantic>=2.6
 python-multipart==0.0.6
