--- a/observability_proxy_server/requirements.txt
+++ b/observability_proxy_server/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-httpx==0.25.2
+fastapi>=0.111
+uvicorn[standard]
+httpx>=0.27
 langfuse==2.50.2
 pydantic>=2.6
-python-multipart==0.0.6
+python-multipart
